--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,3 +22,7 @@ test:
 production:
   domain_name: <%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+staging:
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
